--- a/sections/FAQ.liquid
+++ b/sections/FAQ.liquid
@@ -1,6 +1,11 @@
 {% schema %}
   {
-    "name": "Section name",
-    "settings": []
+    "name": "FAQ",
+    "settings": [],
+   "presets": [
+    {
+      "name":"faq"
+    }
+   ]
   }
 {% endschema %}
