--- a/sections/FAQ.liquid
+++ b/sections/FAQ.liquid
@@ -8,6 +8,19 @@
          "id": "headline"
       }
     ],
+   "blocks": [
+      {
+         "name": "Question",
+         "type": "question",
+         "settings": [
+         {
+          "type": "text",
+          "label": "question",
+          "id": "question"
+         }
+         ]
+      }
+   ],
    "presets": [
     {
       "name":"FAQ"
