--- a/sections/FAQ.liquid
+++ b/sections/FAQ.liquid
@@ -17,6 +17,11 @@
           "type": "text",
           "label": "question",
           "id": "question"
+         },
+         {
+          "type": "text",
+          "label": "Answer",
+          "id":"answer"
          }
          ]
       }
