--- a/sections/FAQ.liquid
+++ b/sections/FAQ.liquid
@@ -1,4 +1,4 @@
-{{ 'section-faq.css' | asset_url | stylesheet_tag }}
+{{ 'section-FAQ.css' | asset_url | stylesheet_tag }}
 
 <div class="faq-container">
 
