--- a/sections/FAQ.liquid
+++ b/sections/FAQ.liquid
@@ -1,24 +1,24 @@
 {{ 'section-FAQ.css' | asset_url | stylesheet_tag }}
 
-<div class="faq-container">
+<div class="page-width faq">
 
   <h2>Frequently Asked Questions</h2>
-  <div class="faq-row">
-      <input type="checkbox" id="question1" class="faq_toggle">
-      <label for="question1" class="faq-question">What is your return policy?</label>
-      <div class="faq-answer">Any item can be returned within 30 days in their original condition.</div>
+  <div class="faq__row">
+      <input type="checkbox" id="question-1" class="faq__toggle">
+      <label for="question-1" class="faq__question">What is your return policy?</label>
+      <div class="faq__answer">Any item can be returned within 30 days in their original condition.</div>
   </div>
 
-  <div class="faq-row">
-      <input type="checkbox" id="question2" class="faq_toggle">
-      <label for="question2" class="faq-question">How long does shipping take?</label>
-      <div class="faq-answer">Standard shipping takes 3-5 business days. Other options are available.</div>
+  <div class="faq__row">
+      <input type="checkbox" id="question-2" class="faq__toggle">
+      <label for="question-2" class="faq-question">How long does shipping take?</label>
+      <div class="faq__answer">Standard shipping takes 3-5 business days. Other options are available.</div>
   </div>
 
-  <div class="faq-row">
-    <input type="checkbox" id="question3" class="faq_toggle">
-    <label for="question3" class="faq-question">Do you offer international shipping?</label>
-    <div class="faq-answer">Yes, we ship internationally. Costs may vary, and are calculated at checkout.</div>
+  <div class="faq__row">
+    <input type="checkbox" id="question-3" class="faq__toggle">
+    <label for="question-3" class="faq__question">Do you offer international shipping?</label>
+    <div class="faq__answer">Yes, we ship internationally. Costs may vary, and are calculated at checkout.</div>
 
   </div>
 
