--- a/assets/section-FAQ.css
+++ b/assets/section-FAQ.css
@@ -8,7 +8,7 @@
   display: none;
 }
 
-.faq_question {
+.faq__question {
   background-color: #f2f2f2;
   display: flex;
   justify-content: space-between;
@@ -16,28 +16,28 @@
   cursor: pointer;
 }
 
-.faq_question:hover {
+.faq__question:hover {
   background-color: #eaeaea;
 }
 
-.faq_question::after {
+.faq__question::after {
   content: "\276F";
   transition: all .5s;
   float: right;
 }
 
-.faq_toggle:checked + .faq_question::after {
+.faq__toggle:checked + .faq__question::after {
   transform: rotate(90deg);
 }
 
-.faq_answer {
+.faq__answer {
   max-height: 0;
   overflow: hidden;
   transition: all .4s;
   padding: 0 1em;
 }
 
-.faq_toggle:checked ~ .faq_answer {
+.faq__toggle:checked ~ .faq__answer {
   max-height: 100vh;
   padding: 1em;
 }
